--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,8 @@ markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     selenium: marks tests as requiring selenium
     network: marks tests as requiring network
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+filterwarnings =
+    ignore:.*distutils.*:DeprecationWarning
